--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Cat Search</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.0/slimselect.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/notiflix/2.8.0/notiflix-aio-2.8.0.min.css"
+    />
   </head>
   <body>
-    <select class="breed-select"></select>
-    <p class="loader">Loading data, please wait...</p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
-    <div class="cat-info"></div>
+    <div class="container">
+      <div class="loader">Loading...</div>
+      <div class="error">Error occurred while fetching data</div>
+      <div class="cat-info">
+        <img class="cat-image" alt="Cat Image" />
+        <div class="cat-details">
+          <h2 class="breed-name"></h2>
+          <p class="description"></p>
+          <p class="temperament"></p>
+        </div>
+      </div>
+      <select class="breed-select"></select>
+    </div>
 
-    <script src="index.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.0/slimselect.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/notiflix/2.8.0/notiflix-aio-2.8.0.min.js"></script>
+    <script src="./js/cat-api.js" type="module"></script>
+    <script src="./js/app.js" type="module"></script>
   </body>
 </html>
