--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat Search</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.0/slimselect.min.css"
@@ -31,7 +31,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.0/slimselect.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/notiflix/2.8.0/notiflix-aio-2.8.0.min.js"></script>
-    <script src="./js/cat-api.js" type="module"></script>
-    <script src="./js/app.js" type="module"></script>
+    <script src="cat-api.js" type="module"></script>
+    <script src="app.js" type="module"></script>
   </body>
 </html>
